# taichi_mesh2sdf

./: .gitignore  README.md  pyproject.toml
test/: mesh2sdf.py  sdf2occ.py
ti_mesh2sdf/: __init__.py  func.py  utils.py
utils/: blender_convert_obj.py  download_example.py
